style: layout changes and spacing fixes

--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -2,9 +2,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 8rem;
+    padding: 0.5rem 8rem;
     z-index: 999;
     background-color: var(--color-bg-dark);
+    position: sticky;
+    top: 0;
 }
 
 .nav-bar {
