--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,6 +1,7 @@
 /* ========================================
    FITXBRAWL GLOBAL CSS
    ======================================== */
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Figtree:ital,wght@0,300..900;1,300..900&family=Stack+Sans+Text:wght@200..700&display=swap');
 
 /* Custom Font Face */
 @font-face {
@@ -47,9 +48,8 @@
   --color-out-stock: #dc3545;
 
   /* Typography */
-  --font-family-primary: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-  --font-family-display: 'zuume-rough-bold', 'Poppins', sans-serif;
-
+  --font-family-primary: 'Figtree', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  --font-family-display: 'zuume-rough-bold', 'Stack Sans Text', sans-serif;
   /* Font Sizes */
   --font-size-xs: 0.75rem;
   /* 12px */
